--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#" class="pc-nav__link">
+            <a href="page-information.html" class="pc-nav__link">
               Information
               <p class="pc-nav__subtitle">ダイビング情報</p>
             </a>
