--- a/src/page-campaign.html
+++ b/src/page-campaign.html
@@ -465,7 +465,7 @@
     </section>
   </main>
   <!--フッター-->
-  <footer class="top-footer footer">
+  <footer class="layout-footer footer">
     <div class="fooer__inner inner">
       <div class="footer__wrapper">
         <div class="footer__container">
