--- a/src/page-information.html
+++ b/src/page-information.html
@@ -224,8 +224,8 @@
       <div class="sub-mv__inner">
         <div class="sub-mv__image">
           <picture>
-            <source srcset="./assets/images/common/about_mv.jpg" media="(min-width: 768px)">
-            <img src="./assets/images/common/about_mv-sp.jpg" alt="黄色い熱帯魚が2匹泳いでいる様子" decoding="async">
+            <source srcset="./assets/images/common/information_mv.jpg" media="(min-width: 768px)">
+            <img src="./assets/images/common/information_mv_sp.jpg" alt="黄色い熱帯魚が2匹泳いでいる様子" decoding="async">
           </picture>
         </div>
         <div class="sub-mv__title">
@@ -239,91 +239,66 @@
         <div class="bredcrumb__text">パンくずリスト</div>
       </div>
     </div>
-    <!-- 下層About us -->
-    <div class="layout-about page-about">
-      <div class="page-about__inner inner">
-        <div class="about__body about__body--offset">
-          <div class="about__image-container about__image-container--layout">
-            <picture>
-              <source srcset="./assets/images/common/about_img_2.jpg" media="(min-width: 768px)" width="1760"
-                height="1162">
-              <img src="./assets/images/common/about_img_2-sp.jpg" alt="黄色い二匹の魚が泳いでいる様子" decoding="async" loading="lazy"
-                width="562" height="372">
-            </picture>
+    <!-- 下層 Information -->
+   <section class="layout-information page-information">
+    <div class="page-information__inner inner">
+      <div class="page-information__tab tab">
+        <div class="tab__list">
+          <button class="tab__button tab__button--whale js-tab-button is-active">ライセンス<br class="u-mobile">講習</button>
+          <button class="tab__button tab__button--shark js-tab-button">ファン<br class="u-mobile">ダイビング</button>
+          <button class="tab__button tab__button--small-fish js-tab-button">体験<br class="u-mobile">ダイビング</button>
+        </div>
+
+        <div class="tab__contents">
+          <div class="tab__content js-tab-content is-active">
+            <div class="tab__text-block">
+              <h2 class="tab__title">ライセンス講習</h2>
+              <p class="tab__text">
+                泳げない人も、ちょっと水が苦手な人も、ダイビングを「安全に」
+                楽しんでいただけるよう、スタッフがサポートいたします&#33;ス
+                キューバダイビングを楽しむためには最低限の知識とスキルが要求
+                されます。知識やスキルと言ってもそんなに難しい事ではなく、安
+                全に楽しむ事を目的としたものです。プロダイバーの指導のもと知
+                識とスキルを習得しCカードを取得して、ダイバーになろう&#33;</p>
+            </div>
+            <div class="tab__image">
+              <img src="./assets/images/common/information_media_1.jpg" alt="ライセンス" decoding="async" loading="lazy"
+              width="984" height="626">
+            </div>
           </div>
-          <div class="about__image-container-sub u-desktop">
-            <picture>
-              <source srcset="./assets/images/common/about_img_1-sp.jpg" media="(min-width: 768px)" width="1212"
-                height="800">
-              <img src="./assets/images/common/about_img_1.jpg" alt="瓦屋根の上のシーサー" decoding="async" loading="lazy"
-                width="194" height="388">
-            </picture>
+          <div class="tab__content js-tab-content">
+            <div class="tab__text-block">
+              <h2 class="tab__title">ファンダイビング</h2>
+              <p class="tab__text">
+                ブランクダイバー、ライセンスを取り立ての方も安心&#33;沖縄本島を
+                代表する「青の洞窟」（真栄田岬）やケラマ諸島などメジャーなポ
+                イントはモチロンのこと、最北端「辺戸岬」や最南端の「大渡海
+                岸」等もご用意&#33;
+            </div>
+            <div class="tab__image">
+              <img src="./assets/images/common/information_media_2.jpg" alt="ライセンス" decoding="async" loading="lazy"
+              width="984" height="626">
+            </div>
           </div>
-          <div class="about__text-group about__text-group">
-            <p class="about__title about__title--absolute">Dive into<br>the Ocean</p>
-            <div class="about__group">
-              <p class="about__text about__text--layout">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
+          <div class="tab__content js-tab-content">
+            <div class="tab__text-block">
+              <h2 class="tab__title">体験ダイビング</h2>
+              <p class="tab__text">
+                ブランクダイバー、ライセンスを取り立ての方も安心&#33;沖縄本島を
+                代表する「青の洞窟」（真栄田岬）やケラマ諸島などメジャーなポ
+                イントはモチロンのこと、最北端「辺戸岬」や最南端の「大渡海
+                岸」等もご用意&#33;
+            </div>
+            <div class="tab__image">
+              <img src="./assets/images/common/information_media_3.jpg" alt="体験ダイビング" decoding="async" loading="lazy"
+              width="984" height="626">
             </div>
           </div>
         </div>
+      </div>
       </div>
     </div>
-    <!-- Gallery -->
-    <section class="layout-gallery gallery">
-      <div class="gallery__inner inner">
-        <div class="section-header">
-          <p class="section-header__title"> Gallery</p>
-          <h2 class="section-header__subtitle">フォト</h2>
-        </div>
-        <div class="gallery__contents">
-          <div class="gallery__image gallery__image--1">
-            <a href="#" class="js-modal-open" data-image="./assets/images/common/gallery1.jpg" data-index="1">
-              <img src="./assets/images/common/gallery1.jpg" alt="赤い小さな魚の群れ" decoding="async" loading="lazy"
-                width="1492" height="984">
-            </a>
-          </div>
-          <div class="gallery__image gallery__image--2">
-            <a href="#" class="js-modal-open" data-image="./assets/images/common/gallery2.jpg">
-              <img src="./assets/images/common/gallery2.jpg" alt="海に浮かぶ船" decoding="async" loading="lazy" width="1160"
-                height="738">
-            </a>
-          </div>
-          <div class="gallery__image gallery__image--3">
-            <a href="#" class="js-modal-open" data-image="./assets/images/common/gallery3.jpg">
-              <img src="./assets/images/common/gallery3.jpg" alt="縞模様の熱帯魚" decoding="async" loading="lazy" width="1160"
-                height="738">
-            </a>
-          </div>
-          <div class="gallery__image gallery__image--4">
-            <a href="#" class="js-modal-open" data-image="./assets/images/common/gallery4.jpg">
-              <img src="./assets/images/common/gallery4.jpg" alt="黄色い熱帯魚" decoding="async" loading="lazy" width="1160"
-                height="738">
-            </a>
-          </div>
-          <div class="gallery__image gallery__image--5">
-            <a href="#" class="js-modal-open" data-image="./assets/images/common/gallery5.jpg">
-              <img src="./assets/images/common/gallery5.jpg" alt="魚の群れ" decoding="async" loading="lazy" width="1160"
-                height="738">
-            </a>
-          </div>
-          <div class="gallery__image gallery__image--6">
-            <a href="#" class="js-modal-open" data-image="./assets/images/common/gallery6.jpg" data-index="6">
-              <img src="./assets/images/common/gallery6.jpg" alt="黄色い熱帯魚" decoding="async" loading="lazy" width="1492"
-                height="984">
-            </a>
-          </div>
-          <!-- モーダル -->
-          <div class="modal js-modal">
-            <div class="modal__overlay js-modal-close"></div>
-            <div class="modal__content">
-              <img src="" alt="" class="modal__image">
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </section>
+   </section>
     <!-- Contact -->
     <section class="campaign-contact contact">
       <div class="contact__inner inner">
