--- a/src/index.html
+++ b/src/index.html
@@ -137,7 +137,7 @@
                   <div class="sp-nav__group">
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="#">ダイビング情報</a>
+                        <a href="page-information.html">ダイビング情報</a>
                       </li>
                       <li class="sp-nav__body">
                         <ul class="sp-nav__lists">
@@ -155,7 +155,7 @@
                     </ul>
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="#">ブログ</a>
+                        <a href="page-blog.html">ブログ</a>
                       </li>
                     </ul>
                   </div>
