--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#" class="pc-nav__link">
+            <a href="page-blog.html" class="pc-nav__link">
               Blog
               <p class="pc-nav__subtitle">ブログ</p>
             </a>
