--- a/src/page-blog.html
+++ b/src/page-blog.html
@@ -422,7 +422,7 @@
                 <div class="sidebar__title">口コミ</div>
                 <div class="sidebar__review">
                   <div class="sidebar__review-image">
-                    <img src="./assets/images/common/age_voice_img3.jpg" alt="黄色い熱帯魚" decoding="async" loading="lazy"
+                    <img src="./assets/images/common/review_img1.jpg" alt="カップル" decoding="async" loading="lazy"
                       width="588" height="436">
                   </div>
                     <div class="sidebar__review-textbox">
@@ -439,47 +439,42 @@
                 <div class="sidebar__campaign-contents">
                   <div class="sidebar__campaign-cards">
                     <div class="sidebar__campaign-cards-item">
-                      <div class="campaign-card">
-                        <figure class="campaign-card__img">
+                      <div class="sidebar__campaign-card">
+                        <figure class="sidebar__campaign-card__img">
                           <img src="./assets/images/common/campaign_img_1.jpg" alt="色鮮やかな魚の群れ" decoding="async"
-                            loading="lazy" width="666" height="446">
+                            loading="lazy" width="588" height="376">
                         </figure>
-                        <div class="campaign-card__body campaign-card__body--layout">
-                          <div class="campaign-card__category">
-                            <div class="campaign-card__label">ライセンス講習</div>
-                          </div>
-                          <div class="campaign-card__title campaign__title--size">ライセンス取得</div>
-                          <div class="campaign-card__wrap">
-                            <div class="campaign-card__text">全部コミコミ(お一人様)</div>
-                            <div class="campaign-card__price">
-                              <p class="campaign-card__first-price">¥56,000</p>
-                              <p class="campaign-card__second-price campaign-card__second-price--layout">¥46,000</p>
+                        <div class="sidebar__campaign-card__body">
+                          <div class="sidebar__campaign-card__title">ライセンス取得</div>
+                          <div class="sidebar__campaign-card__wrap">
+                            <div class="sidebar__campaign-card__text">全部コミコミ(お一人様)</div>
+                            <div class="sidebar__campaign-card__price">
+                              <p class="sidebar__campaign-card__first-price">¥56,000</p>
+                              <p class="sidebar__campaign-card__second-price">¥46,000</p>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
                     <div class="sidebar__campaign-cards-item">
-                      <div class="campaign-card">
-                        <figure class="campaign-card__img">
+                      <div class="sidebar__campaign-card">
+                        <figure class="sidebar__campaign-card__img">
                           <img src="./assets/images/common/campaign_img_2.jpg" alt="エメラルドグリーンの海と船" decoding="async"
-                            loading="lazy" width="666" height="446">
+                            loading="lazy" width="588" height="376">
                         </figure>
-                        <div class="campaign-card__body campaign-card__body--layout">
-                          <div class="campaign-card__category">
-                            <div class="campaign-card__label">体験ダイビング</div>
-                          </div>
-                          <div class="campaign-card__title campaign__title--size">貸切体験ダイビング</div>
-                          <div class="campaign-card__wrap">
-                            <div class="campaign-card__text">全部コミコミ(お一人様)</div>
-                            <div class="campaign-card__price">
-                              <p class="campaign-card__first-price">¥24,000</p>
-                              <p class="campaign-card__second-price campaign-card__second-price--layout">¥18,000</p>
+                        <div class="sidebar__campaign-card__body">
+                          <div class="sidebar__campaign-card__title">貸切体験ダイビング</div>
+                          <div class="sidebar__campaign-card__wrap">
+                            <div class="sidebar__campaign-card__text">全部コミコミ(お一人様)</div>
+                            <div class="sidebar__campaign-card__price">
+                              <p class="sidebar__campaign-card__first-price">¥24,000</p>
+                              <p class="sidebar__campaign-card__second-price">¥18,000</p>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
+
                   </div>
                 </div>
                 <div class="sidebar__btn">
