--- a/src/index.html
+++ b/src/index.html
@@ -78,13 +78,13 @@
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#" class="pc-nav__link">
+            <a href="page-voice.html" class="pc-nav__link">
               Voice
               <p class="pc-nav__subtitle">お客様の声</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#" class="pc-nav__link">
+            <a href="page-price.html" class="pc-nav__link">
               Price
               <p class="pc-nav__subtitle">料金一覧</p>
             </a>
