--- a/src/page-campaign.html
+++ b/src/page-campaign.html
@@ -409,7 +409,7 @@
         </div>
        </div>
        <!-- ページナビ -->
-       <div class="campaign-pagenavi pagenavi">
+       <div class="page-campaign__pagenavi pagenavi">
         <div class="wp-pagenavi">
         <a class="previouspostslink" rel="prev" href="#"></a>
         <span class="current">1</span>
@@ -425,7 +425,7 @@
     </div>
   </div>
     <!-- Contact -->
-    <section class="campaign-contact contact">
+    <section class="layout-contact contact">
       <div class="contact__inner inner">
         <div class="contact__contents">
           <div class="contact__info">
