--- a/src/page-information.html
+++ b/src/page-information.html
@@ -300,7 +300,7 @@
     </div>
    </section>
     <!-- Contact -->
-    <section class="campaign-contact contact">
+    <section class="layout-contact contact">
       <div class="contact__inner inner">
         <div class="contact__contents">
           <div class="contact__info">
