--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#" class="pc-nav__link">
+            <a href="page-faq.html" class="pc-nav__link">
               FAQ
               <p class="pc-nav__subtitle">よくある質問</p>
             </a>
