--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#" class="pc-nav__link">
+            <a href="page-contact.html" class="pc-nav__link">
               Contact
               <p class="pc-nav__subtitle">お問合せ</p>
             </a>
