--- a/src/page-sitemap.html
+++ b/src/page-sitemap.html
@@ -39,6 +39,7 @@
 </head>
 
 <body id="top">
+  <div class="layout-container">
   <header class="top-header header" id="js-header">
     <div class="header__inner">
       <h1 class="header__title">
@@ -242,122 +243,118 @@
     <!-- 下層サイトマップ -->
     <div class="layout-sitemap page-sitemap">
       <div class="page-sitemap__inner inner">
-        <div class="page-sitemap__content">
-          <div class="page-sitemap__nav">
-            <nav class="sitemap__nav">
-              <div class="sitemap-nav">
-                <div class="sitemap-nav__contents">
-                  <div class="sitemap-nav__container">
-                    <div class="sitemap-nav__flex">
-                      <div class="sitemap-nav__group">
-                        <ul class="sitemap-nav__wrapper">
-                          <li class="sitemap-nav__title">
-                            <a href="#">キャンペーン</a>
-                          </li>
-                          <li class="sitemap-nav__body">
-                            <ul class="sitemap-nav__lists">
-                              <li class="sitemap-nav__list">
-                                <a href="#">ライセンス取得</a>
-                              </li>
-                              <li class="sitemap-nav__list">
-                                <a href="#">貸切体験ダイビング</a>
-                              </li>
-                              <li class="sitemap-nav__list">
-                                <a href="#">ナイトダイビング</a>
-                              </li>
-                            </ul>
-                          </li>
-                        </ul>
-                        <ul class="sitemap-nav__wrapper">
-                          <li class="sitemap-nav__title">
-                            <a href="#">私たちについて</a>
-                          </li>
-                        </ul>
-                      </div>
-                      <div class="sitemap-nav__group">
-                        <ul class="sitemap-nav__wrapper">
-                          <li class="sitemap-nav__title">
-                            <a href="#">ダイビング情報</a>
-                          </li>
-                          <li class="sitemap-nav__body">
-                            <ul class="sitemap-nav__lists">
-                              <li class="sitemap-nav__list">
-                                <a href="#">ライセンス講習</a>
-                              </li>
-                              <li class="sitemap-nav__list">
-                                <a href="#">体験ダイビング</a>
-                              </li>
-                              <li class="sitemap-nav__list">
-                                <a href="#">ファンダイビング</a>
-                              </li>
-                            </ul>
-                          </li>
-                        </ul>
-                        <ul class="sitemap-nav__wrapper">
-                          <li class="sitemap-nav__title">
-                            <a href="#">ブログ</a>
-                          </li>
-                        </ul>
-                      </div>
+        <div class="page-sitemap__nav">
+          <nav class="footer__nav">
+            <div class="footer-nav">
+              <div class="footer-nav__contents footer-nav__contents--gap">
+                <div class="footer-nav__container">
+                  <div class="footer-nav__flex footer-nav__flex--gap">
+                    <div class="footer-nav__group">
+                      <ul class="footer-nav__wrapper">
+                        <li class="footer-nav__title footer-nav__title--color">
+                          <a href="#">キャンペーン</a>
+                        </li>
+                        <li class="footer-nav__body">
+                          <ul class="footer-nav__lists">
+                            <li class="footer-nav__list footer-nav__list--color">
+                              <a href="#">ライセンス取得</a>
+                            </li>
+                            <li class="footer-nav__list footer-nav__list--color">
+                              <a href="#">貸切体験ダイビング</a>
+                            </li>
+                            <li class="footer-nav__list footer-nav__list--color">
+                              <a href="#">ナイトダイビング</a>
+                            </li>
+                          </ul>
+                        </li>
+                      </ul>
+                      <ul class="footer-nav__wrapper">
+                        <li class="footer-nav__title footer-nav__title--color">
+                          <a href="#">私たちについて</a>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="footer-nav__group">
+                      <ul class="footer-nav__wrapper">
+                        <li class="footer-nav__title footer-nav__title--color">
+                          <a href="#">ダイビング情報</a>
+                        </li>
+                        <li class="footer-nav__body">
+                          <ul class="footer-nav__lists">
+                            <li class="footer-nav__list footer-nav__list--color">
+                              <a href="#">ライセンス講習</a>
+                            </li>
+                            <li class="footer-nav__list footer-nav__list--color">
+                              <a href="#">体験ダイビング</a>
+                            </li>
+                            <li class="footer-nav__list footer-nav__list--color">
+                              <a href="#">ファンダイビング</a>
+                            </li>
+                          </ul>
+                        </li>
+                      </ul>
+                      <ul class="footer-nav__wrapper">
+                        <li class="footer-nav__title footer-nav__title--color">
+                          <a href="#">ブログ</a>
+                        </li>
+                      </ul>
                     </div>
                   </div>
-                  <div class="sitemap-nav__container">
-                    <div class="sitemap-nav__flex">
-                      <div class="sitemap-nav__group">
-                        <ul class="sitemap-nav__wrapper">
-                          <li class="sitemap-nav__title">
-                            <a href="#">お客様の声</a>
-                          </li>
-                        </ul>
-                        <ul class="sitemap-nav__wrapper">
-                          <li class="sitemap-nav__title">
-                            <a href="#">料金一覧</a>
-                          </li>
-                          <li class="sitemap-nav__body">
-                            <ul class="sitemap-nav__lists">
-                              <li class="sitemap-nav__list">
-                                <a href="#">ライセンス講習</a>
-                              </li>
-                              <li class="sitemap-nav__list">
-                                <a href="#">体験ダイビング</a>
-                              </li>
-                              <li class="sitemap-nav__list">
-                                <a href="#">ファンダイビング</a>
-                              </li>
-                            </ul>
-                          </li>
-                        </ul>
-                      </div>
-                      <div class="sitemap-nav__group">
-                        <ul class="sitemap-nav__wrapper">
-                          <li class="sitemap-nav__title">
-                            <a href="#">よくある質問</a>
-                          </li>
-                        </ul>
-                        <ul class="sitemap-nav__wrapper">
-                          <li class="sitemap-nav__title">
-                            <a href="#">プライバシー<br class="u-mobile">ポリシー</a>
-                          </li>
-                        </ul>
-                        <ul class="sitemap-nav__wrapper">
-                          <li class="sitemap-nav__title">
-                            <a href="#">利用規約</a>
-                          </li>
-                        </ul>
-                        <ul class="sitemap-nav__wrapper">
-                          <li class="sitemap-nav__title">
-                            <a href="#">お問い合わせ</a>
-                          </li>
-                        </ul>
-                      </div>
+                </div>
+                <div class="footer-nav__container">
+                  <div class="footer-nav__flex footer-nav__flex--gap">
+                    <div class="footer-nav__group">
+                      <ul class="footer-nav__wrapper">
+                        <li class="footer-nav__title footer-nav__title--color">
+                          <a href="#">お客様の声</a>
+                        </li>
+                      </ul>
+                      <ul class="footer-nav__wrapper">
+                        <li class="footer-nav__title footer-nav__title--color">
+                          <a href="#">料金一覧</a>
+                        </li>
+                        <li class="footer-nav__body">
+                          <ul class="footer-nav__lists">
+                            <li class="footer-nav__list footer-nav__list--color">
+                              <a href="#">ライセンス講習</a>
+                            </li>
+                            <li class="footer-nav__list footer-nav__list--color">
+                              <a href="#">体験ダイビング</a>
+                            </li>
+                            <li class="footer-nav__list footer-nav__list--color">
+                              <a href="#">ファンダイビング</a>
+                            </li>
+                          </ul>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="footer-nav__group">
+                      <ul class="footer-nav__wrapper">
+                        <li class="footer-nav__title footer-nav__title--color">
+                          <a href="#">よくある質問</a>
+                        </li>
+                      </ul>
+                      <ul class="footer-nav__wrapper">
+                        <li class="footer-nav__title footer-nav__title--color">
+                          <a href="#">プライバシー<br class="u-mobile">ポリシー</a>
+                        </li>
+                      </ul>
+                      <ul class="footer-nav__wrapper">
+                        <li class="footer-nav__title footer-nav__title--color">
+                          <a href="#">利用規約</a>
+                        </li>
+                      </ul>
+                      <ul class="footer-nav__wrapper">
+                        <li class="footer-nav__title footer-nav__title--color">
+                          <a href="#">お問い合わせ</a>
+                        </li>
+                      </ul>
                     </div>
                   </div>
                 </div>
               </div>
-            </nav>
-
-          </div>
-
+            </div>
+          </nav>
         </div>
 
       </div>
@@ -426,7 +423,7 @@
                 <div class="footer-nav__flex">
                   <div class="footer-nav__group">
                     <ul class="footer-nav__wrapper">
-                      <li class="footer-nav__title">
+                      <li class="footer-nav__title ">
                         <a href="#">キャンペーン</a>
                       </li>
                       <li class="footer-nav__body">
@@ -444,14 +441,14 @@
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
-                      <li class="footer-nav__title">
+                      <li class="footer-nav__title ">
                         <a href="#">私たちについて</a>
                       </li>
                     </ul>
                   </div>
                   <div class="footer-nav__group">
                     <ul class="footer-nav__wrapper">
-                      <li class="footer-nav__title">
+                      <li class="footer-nav__title ">
                         <a href="#">ダイビング情報</a>
                       </li>
                       <li class="footer-nav__body">
@@ -469,7 +466,7 @@
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
-                      <li class="footer-nav__title">
+                      <li class="footer-nav__title ">
                         <a href="#">ブログ</a>
                       </li>
                     </ul>
@@ -480,12 +477,12 @@
                 <div class="footer-nav__flex">
                   <div class="footer-nav__group">
                     <ul class="footer-nav__wrapper">
-                      <li class="footer-nav__title">
+                      <li class="footer-nav__title ">
                         <a href="#">お客様の声</a>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
-                      <li class="footer-nav__title">
+                      <li class="footer-nav__title ">
                         <a href="#">料金一覧</a>
                       </li>
                       <li class="footer-nav__body">
@@ -505,22 +502,22 @@
                   </div>
                   <div class="footer-nav__group">
                     <ul class="footer-nav__wrapper">
-                      <li class="footer-nav__title">
+                      <li class="footer-nav__title ">
                         <a href="#">よくある質問</a>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
-                      <li class="footer-nav__title">
+                      <li class="footer-nav__title ">
                         <a href="#">プライバシー<br class="u-mobile">ポリシー</a>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
-                      <li class="footer-nav__title">
+                      <li class="footer-nav__title ">
                         <a href="#">利用規約</a>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
-                      <li class="footer-nav__title">
+                      <li class="footer-nav__title ">
                         <a href="#">お問い合わせ</a>
                       </li>
                     </ul>
@@ -538,5 +535,6 @@
   </footer>
   <a href="#top" class="page-top-button js-page-top" aria-label="ページトップに移動する"></a>
 </body>
+</div>
 
 </html>
