--- a/src/index.html
+++ b/src/index.html
@@ -166,12 +166,12 @@
                   <div class="sp-nav__group">
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="#">お客様の声</a>
+                        <a href="page-voice.html">お客様の声</a>
                       </li>
                     </ul>
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="#">料金一覧</a>
+                        <a href="page-price.html">料金一覧</a>
                       </li>
                       <li class="sp-nav__body">
                         <ul class="sp-nav__lists">
@@ -191,22 +191,22 @@
                   <div class="sp-nav__group">
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="#">よくある質問</a>
+                        <a href="page-faq.html">よくある質問</a>
                       </li>
                     </ul>
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="#">プライバシー<br class="u-mobile">ポリシー</a>
+                        <a href="page-privacypolicy.html">プライバシー<br class="u-mobile">ポリシー</a>
                       </li>
                     </ul>
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="#">利用規約</a>
+                        <a href="page-terms.html">利用規約</a>
                       </li>
                     </ul>
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="#">お問い合わせ</a>
+                        <a href="page-contact.html">お問い合わせ</a>
                       </li>
                     </ul>
                   </div>
