--- a/src/page-campaign.html
+++ b/src/page-campaign.html
@@ -54,49 +54,49 @@
       <nav class="header__pc-nav pc-nav">
         <ul class="pc-nav__items">
           <li class="pc-nav__item">
-            <a href="#" class="pc-nav__link">
+            <a href="page-campaign.html" class="pc-nav__link">
               Campaign
               <p class="pc-nav__subtitle">キャンペーン</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#" class="pc-nav__link">
+            <a href="page-about.html" class="pc-nav__link">
               About us
               <p class="pc-nav__subtitle">私たちについて</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#" class="pc-nav__link">
+            <a href="page-information.html" class="pc-nav__link">
               Information
               <p class="pc-nav__subtitle">ダイビング情報</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#" class="pc-nav__link">
+            <a href="page-blog.html" class="pc-nav__link">
               Blog
               <p class="pc-nav__subtitle">ブログ</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#" class="pc-nav__link">
+            <a href="page-voice.html" class="pc-nav__link">
               Voice
               <p class="pc-nav__subtitle">お客様の声</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#" class="pc-nav__link">
+            <a href="page-price.html" class="pc-nav__link">
               Price
               <p class="pc-nav__subtitle">料金一覧</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#" class="pc-nav__link">
+            <a href="page-faq.html" class="pc-nav__link">
               FAQ
               <p class="pc-nav__subtitle">よくある質問</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#" class="pc-nav__link">
+            <a href="page-contact.html" class="pc-nav__link">
               Contact
               <p class="pc-nav__subtitle">お問合せ</p>
             </a>
@@ -112,7 +112,7 @@
                   <div class="sp-nav__group">
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="#">キャンペーン</a>
+                        <a href="page-campaign.html">キャンペーン</a>
                       </li>
                       <li class="sp-nav__body">
                         <ul class="sp-nav__lists">
@@ -130,14 +130,14 @@
                     </ul>
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="#">私たちについて</a>
+                        <a href="page-about.html">私たちについて</a>
                       </li>
                     </ul>
                   </div>
                   <div class="sp-nav__group">
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="#">ダイビング情報</a>
+                        <a href="page-information.html">ダイビング情報</a>
                       </li>
                       <li class="sp-nav__body">
                         <ul class="sp-nav__lists">
@@ -155,7 +155,7 @@
                     </ul>
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="#">ブログ</a>
+                        <a href="page-blog.html">ブログ</a>
                       </li>
                     </ul>
                   </div>
@@ -166,12 +166,12 @@
                   <div class="sp-nav__group">
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="#">お客様の声</a>
+                        <a href="page-voice.html">お客様の声</a>
                       </li>
                     </ul>
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="#">料金一覧</a>
+                        <a href="page-price.html">料金一覧</a>
                       </li>
                       <li class="sp-nav__body">
                         <ul class="sp-nav__lists">
@@ -191,22 +191,22 @@
                   <div class="sp-nav__group">
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="#">よくある質問</a>
+                        <a href="page-faq.html">よくある質問</a>
                       </li>
                     </ul>
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="#">プライバシー<br class="u-mobile">ポリシー</a>
+                        <a href="page-privacypolicy.html">プライバシー<br class="u-mobile">ポリシー</a>
                       </li>
                     </ul>
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="#">利用規約</a>
+                        <a href="page-terms.html">利用規約</a>
                       </li>
                     </ul>
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="#">お問い合わせ</a>
+                        <a href="page-contact.html">お問い合わせ</a>
                       </li>
                     </ul>
                   </div>
